--- a/src/app/cube/cube.component.html
+++ b/src/app/cube/cube.component.html
@@ -1,1 +1,5 @@
-<canvas #canvas id="canvas" style="height: 100%; width: 100%;" ></canvas>
+<canvas
+  #canvas
+  id="canvas"
+  style="height: 100%; width: 100%;"
+></canvas>
