fix delete device #11 Delete fixed , refresh after delete not works

--- a/src/app/components/devices-list/devices-list.component.html
+++ b/src/app/components/devices-list/devices-list.component.html
@@ -37,7 +37,7 @@
                     type="button"
                     id="delete-device"
                     class="btn btn-danger btn-sm"
-                    (click)="deleteDevice(device)"
+                    (click)="deleteDevice(device.id)"
                   >
                     Delete
                   </button>
