--- a/src/app/components/edit-device/edit-device.component.html
+++ b/src/app/components/edit-device/edit-device.component.html
@@ -4,66 +4,122 @@
       <h3>Edit Device</h3>
 
       <form [formGroup]="editForm" (ngSubmit)="submitForm()">
-        <div class="form-group">
+        <div class="form-group mb-3">
           <label for="form-id" class="form-label">Id</label>
           <input
             type="text"
             formControlName="id"
             id="form-id"
-            class="form-control"
             maxlength="20"
-            minlength="2"
+            minlength="4"
             value="{{ editForm.value.id }}"
             required
+            [ngClass]="{
+              'is-invalid': this.editForm.controls.id.status != 'VALID',
+              'form-control': true
+            }"
           />
-          <p>Value: {{ editForm.value.id }} -</p>
+          <div *ngIf="f.id.errors" class="invalid-feedback">
+            <div *ngIf="f.id.errors.required">Id is required</div>
+            <div *ngIf="f.id.errors.minlength">
+              Id must be at least 4 characters
+            </div>
+          </div>
+          <p>
+            Value: {{ editForm.value.id }} -
+            {{ this.editForm.controls.id.status }}
+          </p>
+        </div>
+
+        <div class="form-group mb-3">
           <label for="form-name" class="form-label">Name</label>
           <textarea
-            class="form-control"
+            [ngClass]="{
+              'is-invalid': this.editForm.controls.name.status != 'VALID',
+              'form-control': true
+            }"
             formControlName="name"
             rows="2"
+            minlength="4"
             id="form-name"
             maxlength="50"
             >{{ editForm.value.name }}</textarea
           >
-
-          <label for="form-type" class="form-label">Type</label>
-          <select
-            (change)="changeType($event)"
-            formControlName="type"
-            class="form-control"
-            id="form-type"
+          <div
+            *ngIf="this.editForm.controls.name.errors"
+            class="invalid-feedback"
           >
-            <option *ngFor="let typeObj of deviceTypeDict.list; let i = index">
-              {{ typeObj.name }}
-            </option>
-          </select>
-
-          <label for="form-category" class="form-label">Category</label>
-          <select
-            (change)="changeCategory($event)"
-            formControlName="category"
-            class="form-control"
-            id="form-category"
-          >
-            <option
-              *ngFor="let categoryObj of deviceCategoryDict.list; let i = index"
-            >
-              {{ categoryObj.name }}
-            </option>
-          </select>
-
-          <div class="p-2">
-            <button
-              type="submit"
-              [disabled]="!(editForm.valid && editForm.touched)"
-              class="btn btn-primary"
-            >
-              Update
-            </button>
-            <p>Form Status: {{ editForm.status }}</p>
-            <p>Form Values: {{ toString(editForm.value) }}</p>
+            <div *ngIf="this.editForm.controls.name.errors.required">
+              Id is required
+            </div>
+            <div *ngIf="this.editForm.controls.name.errors.minlength">
+              Id must be at least 4 characters
+            </div>
           </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="form-type" class="form-label">Type</label>
+              <select
+                (change)="changeType($event)"
+                formControlName="type"
+                class="form-control"
+                id="form-type"
+              >
+                <option
+                  *ngFor="let typeObj of deviceTypeDict.list; let i = index"
+                >
+                  {{ typeObj.name }}
+                </option>
+              </select>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="form-category" class="form-label">Category</label>
+              <select
+                (change)="changeCategory($event)"
+                formControlName="category"
+                class="form-control"
+                id="form-category"
+              >
+                <option
+                  *ngFor="
+                    let categoryObj of deviceCategoryDict.list;
+                    let i = index
+                  "
+                >
+                  {{ categoryObj.name }}
+                </option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group mb-3">
+          <button
+            type="submit"
+            [disabled]="!(editForm.valid && editForm.touched)"
+            class="btn btn-primary"
+          >
+            Update
+          </button>
+          <div
+            *ngIf="!(editForm.valid && editForm.touched)"
+            class="-valid-feedback"
+          >
+            Form is invalid
+          </div>
+          <div
+            *ngIf="editForm.valid && editForm.touched"
+            class="-invalid-feedback"
+          >
+            Form is valid
+          </div>
+          <p>Form Status: {{ editForm.status }}</p>
+          <p>Form Values: {{ toString(editForm.value) }}</p>
         </div>
       </form>
     </div>
