--- a/src/app/components/add-device/add-device.component.html
+++ b/src/app/components/add-device/add-device.component.html
@@ -56,6 +56,32 @@
           </div>
         </div>
 
+        <div class="form-group mb-3">
+          <label>Dimension</label>
+          <textarea
+            [ngClass]="{
+              'is-invalid': this.addForm.controls.dimensions.status != 'VALID',
+              'form-control': true
+            }"
+            formControlName="Dimension"
+            rows="2"
+            minlength="4"
+            maxlength="50"
+            required
+          ></textarea>
+          <div
+            *ngIf="this.addForm.controls.name.errors"
+            class="invalid-feedback"
+          >
+            <div *ngIf="this.addForm.controls.name.errors.required">
+              Id is required
+            </div>
+            <div *ngIf="this.addForm.controls.name.errors.minlength">
+              Id must be at least 4 characters
+            </div>
+          </div>
+        </div>
+
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
