--- a/src/app/components/models/models-list/models-list.component.html
+++ b/src/app/components/models/models-list/models-list.component.html
@@ -1,1 +1,76 @@
-<p>models-list works!</p>
+<div class="container wrapper">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="inner">
+        <h3>Models</h3>
+        <table class="table table-striped table-dark table-hover">
+          <thead>
+            <tr>
+              <th scope="col">Id</th>
+              <th scope="col">Name</th>
+              <th scope="col">Dimensions</th>
+              <th scope="col">Type</th>
+              <th scope="col">Category</th>
+              <th scope="col">Operations</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr
+              *ngFor="
+                let model of ModelsList
+                  | paginate
+                    : {
+                        id: 'modelPagination',
+                        itemsPerPage: 5,
+                        currentPage: page
+                      }
+              "
+            >
+              <td>{{ model.id }}</td>
+              <td>{{ model.name }}</td>
+              <td>{{ model.getDimentionsString() }}</td>
+              <td>{{ model.type }}</td>
+              <td>{{ model.category }}</td>
+              <td>
+                <div
+                  class="btn-group"
+                  role="group"
+                  aria-label="model-operations"
+                >
+                  <button
+                    type="button"
+                    class="btn btn-success btn-sm move-right"
+                    id="edit-device"
+                    (click)="EditForm(model)"
+                  >
+                    Edit
+                  </button>
+                  <button
+                    type="button"
+                    id="delete-device"
+                    class="btn btn-danger btn-sm"
+                    (click)="deleteModel(model.id)"
+                  >
+                    Delete
+                  </button>
+                </div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <button
+          type="button"
+          class="btn btn-success btn-sm move-right mb-3"
+          (click)="AddForm()"
+        >
+          <i class="bi bi-plus-lg"></i> Add
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+<pagination-controls
+  (pageChange)="page = $event"
+  id="modelPagination"
+></pagination-controls>
+<app-log></app-log>
