model component development part 1

--- a/src/app/components/models/models-list/models-list.component.html
+++ b/src/app/components/models/models-list/models-list.component.html
@@ -28,7 +28,16 @@
             >
               <td>{{ model.id }}</td>
               <td>{{ model.name }}</td>
-              <td>{{ model.getDimentionsString() }}</td>
+              <td>
+                {{
+                  'width: ' +
+                    model.dimension.width +
+                    ', height: ' +
+                    model.dimension.height +
+                    ', deep: ' +
+                    model.dimension.depth
+                }}
+              </td>
               <td>{{ model.type }}</td>
               <td>{{ model.category }}</td>
               <td>
