--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -60,6 +60,40 @@
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
+              <label for="form-dimension-width" class="form-label">Width</label>
+              <input
+                type="text"
+                formControlName="dimension-width"
+                class="form-control"
+                id="form-dimension-width"
+              />
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="form-category" class="form-label">Height</label>
+              <select
+                (change)="changeCategory($event)"
+                formControlName="category"
+                class="form-control"
+                id="form-category"
+              >
+                <option
+                  *ngFor="
+                    let categoryObj of deviceCategoryDict.list;
+                    let i = index
+                  "
+                >
+                  {{ categoryObj.name }}
+                </option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <div class="form-group mb-3">
               <label for="form-type" class="form-label">Type</label>
               <select
                 (change)="changeType($event)"
