--- a/src/app/components/models/add-model/add-model.component.html
+++ b/src/app/components/models/add-model/add-model.component.html
@@ -1,1 +1,148 @@
-<p>add-model works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Add Model</h3>
+      <form
+        [formGroup]="addForm"
+        (ngSubmit)="submitForm()"
+        class="g-3 needs-validation"
+        novalidate
+      >
+        <div class="form-group mb-3">
+          <label>Id</label>
+          <input
+            type="text"
+            formControlName="id"
+            [ngClass]="{
+              'is-invalid': this.addForm.controls.id.status != 'VALID',
+              'form-control': true
+            }"
+            maxlength="20"
+            minlength="4"
+            required
+          />
+          <div *ngIf="f.id.errors" class="invalid-feedback">
+            <div *ngIf="f.id.errors.required">Id is required</div>
+            <div *ngIf="f.id.errors.minlength">
+              Id must be at least 4 characters
+            </div>
+          </div>
+          <div class="valid-feedback">Looks good!</div>
+        </div>
+
+        <div class="form-group mb-3">
+          <label>Name</label>
+          <textarea
+            [ngClass]="{
+              'is-invalid': this.addForm.controls.name.status != 'VALID',
+              'form-control': true
+            }"
+            formControlName="name"
+            rows="2"
+            minlength="4"
+            maxlength="50"
+            required
+          ></textarea>
+          <div
+            *ngIf="this.addForm.controls.name.errors"
+            class="invalid-feedback"
+          >
+            <div *ngIf="this.addForm.controls.name.errors.required">
+              Id is required
+            </div>
+            <div *ngIf="this.addForm.controls.name.errors.minlength">
+              Id must be at least 4 characters
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group mb-3">
+          <label>Dimension</label>
+          <textarea
+            [ngClass]="{
+              'is-invalid': this.addForm.controls.dimensions.status != 'VALID',
+              'form-control': true
+            }"
+            formControlName="Dimension"
+            rows="2"
+            minlength="4"
+            maxlength="50"
+            required
+          ></textarea>
+          <div
+            *ngIf="this.addForm.controls.name.errors"
+            class="invalid-feedback"
+          >
+            <div *ngIf="this.addForm.controls.name.errors.required">
+              Id is required
+            </div>
+            <div *ngIf="this.addForm.controls.name.errors.minlength">
+              Id must be at least 4 characters
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col">
+            <div class="form-group mb-3">
+              <label>Type</label>
+              <select
+                (change)="changeType($event)"
+                formControlName="type"
+                id="type"
+                class="form-select"
+                aria-label="type"
+              >
+                <option></option>
+                <option *ngFor="let data of deviceTypeDict.list; let i = index">
+                  {{ data.name }}
+                </option>
+              </select>
+              <div class="invalid-feedback">Please provide a valid type.</div>
+              <!-- error block -->
+              <div
+                class="invalid-feedback"
+                *ngIf="isSubmitted && addForm.get('type')?.hasError"
+              >
+                <sup>*</sup>Please provide Type name
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label>Category</label>
+              <select
+                (change)="changeCategory($event)"
+                formControlName="category"
+                id="category"
+                class="form-select"
+                aria-label="category"
+              >
+                <option></option>
+                <option
+                  *ngFor="let data of deviceCategoryDict.list; let i = index"
+                >
+                  {{ data.name }}
+                </option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <p>Form Status: {{ addForm.status }}</p>
+        <p>Form Values: {{ toString(addForm.value) }}</p>
+        <div class="form-group mb-3">
+          <button
+            type="submit"
+            [disabled]="!(addForm.valid && addForm.touched)"
+            class="btn btn-primary mb-3"
+          >
+            Add model
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+<app-log></app-log>
