--- a/src/app/components/models/edit-model/edit-model.component.html
+++ b/src/app/components/models/edit-model/edit-model.component.html
@@ -1,1 +1,260 @@
-<p>edit-model works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h3>Edit Model</h3>
+
+      <form [formGroup]="editForm" (ngSubmit)="submitForm()">
+        <div class="form-group mb-3">
+          <label for="form-id" class="form-label">Id</label>
+          <input
+            type="text"
+            formControlName="id"
+            id="form-id"
+            maxlength="20"
+            minlength="1"
+            required
+            [ngClass]="{
+              'is-invalid': this.editForm.controls.id.status != 'VALID',
+              'form-control': true
+            }"
+          />
+          <div *ngIf="f.id.errors" class="invalid-feedback">
+            <div *ngIf="f.id.errors.required">Id is required</div>
+            <div *ngIf="f.id.errors.minlength">
+              Id must be at least 4 characters
+            </div>
+          </div>
+          <p>
+            Value: {{ editForm.value.id }} -
+            {{ this.editForm.controls.id.status }}
+          </p>
+        </div>
+
+        <div class="form-group mb-3">
+          <label for="form-name" class="form-label">Name</label>
+          <textarea
+            [ngClass]="{
+              'is-invalid': this.editForm.controls.name.status != 'VALID',
+              'form-control': true
+            }"
+            formControlName="name"
+            rows="2"
+            minlength="4"
+            id="form-name"
+            maxlength="50"
+            >{{ editForm.value.name }}</textarea
+          >
+          <div
+            *ngIf="this.editForm.controls.name.errors"
+            class="invalid-feedback"
+          >
+            <div *ngIf="this.editForm.controls.name.errors.required">
+              Name is required
+            </div>
+            <div *ngIf="this.editForm.controls.name.errors.minlength">
+              Name must be at least 4 characters
+            </div>
+          </div>
+        </div>
+
+        <div class="row" formGroupName="dimension">
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="width" class="form-label">Width</label>
+              <input
+                type="text"
+                formControlName="width"
+                id="width"
+                maxlength="6"
+                minlength="1"
+                required
+                [ngClass]="{
+                  'is-invalid':
+                    this.editForm.controls.dimension.controls.width.status !=
+                    'VALID',
+                  'form-control': true
+                }"
+              />
+              <div
+                *ngIf="this.editForm.controls.dimension.controls.width.errors"
+                class="invalid-feedback"
+              >
+                <div
+                  *ngIf="
+                    this.editForm.controls.dimension.controls.width.errors
+                      .required
+                  "
+                >
+                  Width is required
+                </div>
+                <div
+                  *ngIf="
+                    this.editForm.controls.dimension.controls.width.errors
+                      .minlength
+                  "
+                >
+                  Width must be at least 1 number.
+                </div>
+              </div>
+              <p>
+                Value: {{ editForm.value.dimension?.width }} -
+                {{ this.editForm.controls.dimension.controls.width.status }}
+              </p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="heigth" class="form-label">Height</label>
+              <input
+                type="text"
+                formControlName="height"
+                id="heigth"
+                maxlength="6"
+                minlength="1"
+                required
+                [ngClass]="{
+                  'is-invalid':
+                    this.editForm.controls.dimension.controls.height.status !=
+                    'VALID',
+                  'form-control': true
+                }"
+              />
+              <div
+                *ngIf="this.editForm.controls.dimension.controls.height.errors"
+                class="invalid-feedback"
+              >
+                <div
+                  *ngIf="
+                    this.editForm.controls.dimension.controls.height.errors
+                      .required
+                  "
+                >
+                  Height is required
+                </div>
+                <div
+                  *ngIf="
+                    this.editForm.controls.dimension.controls.height.errors
+                      .minlength
+                  "
+                >
+                  Height must be at least 1 number
+                </div>
+              </div>
+              <p>
+                Value: {{ editForm.value.dimension?.height }} -
+                {{ this.editForm.controls.dimension.controls.height.status }}
+              </p>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="depth" class="form-label">Depth</label>
+              <input
+                type="text"
+                formControlName="depth"
+                id="depth"
+                maxlength="4"
+                minlength="1"
+                required
+                [ngClass]="{
+                  'is-invalid':
+                    this.editForm.controls.dimension.status != 'VALID',
+                  'form-control': true
+                }"
+              />
+              <div
+                *ngIf="this.editForm.controls.dimension.controls.depth.errors"
+                class="invalid-feedback"
+              >
+                <div
+                  *ngIf="
+                    this.editForm.controls.dimension.controls.depth.errors
+                      .required
+                  "
+                >
+                  Depth is required
+                </div>
+                <div
+                  *ngIf="
+                    this.editForm.controls.dimension.controls.depth.errors
+                      .minlength
+                  "
+                >
+                  Depth must be at least 1 number
+                </div>
+              </div>
+              <p>
+                Value: {{ this.editForm.controls.dimension.value.depth }} -
+                {{ this.editForm.controls.dimension.controls.depth.status }}
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="form-type" class="form-label">Type</label>
+              <select
+                (change)="changeType($event)"
+                formControlName="type"
+                class="form-control"
+                id="form-type"
+              >
+                <option
+                  *ngFor="let typeObj of deviceTypeDict.list; let i = index"
+                >
+                  {{ typeObj.name }}
+                </option>
+              </select>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="form-category" class="form-label">Category</label>
+              <select
+                (change)="changeCategory($event)"
+                formControlName="category"
+                class="form-control"
+                id="form-category"
+              >
+                <option
+                  *ngFor="
+                    let categoryObj of deviceCategoryDict.list;
+                    let i = index
+                  "
+                >
+                  {{ categoryObj.name }}
+                </option>
+              </select>
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group mb-3">
+          <button
+            type="submit"
+            [disabled]="!(editForm.valid && editForm.touched)"
+            class="btn btn-primary"
+          >
+            Update
+          </button>
+          <div
+            *ngIf="!(editForm.valid && editForm.touched)"
+            class="-valid-feedback"
+          >
+            Form is invalid
+          </div>
+          <div
+            *ngIf="editForm.valid && editForm.touched"
+            class="-invalid-feedback"
+          >
+            Form is valid
+          </div>
+          <p>Form Status: {{ editForm.status }}</p>
+          <p>Form Values: {{ toString(editForm.value) }}</p>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<app-log></app-log>
